Fix letter spacing

--- a/public/assets/src/styles/views/_features.sass
+++ b/public/assets/src/styles/views/_features.sass
@@ -78,7 +78,7 @@ section.features
         margin: 0 0 2px 0
         font-size: 1.1rem
         font-weight: bold
-        letter-spacing: .05rem
+        letter-spacing: .02rem
       p
         margin: 0
         font-size: 1.1rem
