--- a/public/assets/src/styles/views/_hero.sass
+++ b/public/assets/src/styles/views/_hero.sass
@@ -15,7 +15,7 @@ section.hero
   .heading
     margin: 82px 0 23px 0
     font-size: 5.4rem
-    letter-spacing: 0.33rem
+    letter-spacing: 0.15rem
     line-height: .9
     .sub
       display: block
@@ -80,6 +80,8 @@ section.hero
       background-color: white
       h3
         margin: 0 0 5px 0
+        font-size: 1.085rem
+        line-height: 1.5
       .checkbox,
       .disclaimer
         font-size: .88rem
